build_error_utf8.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug
> Task :app:generateDebugResValues
> Task :app:generateDebugResources
> Task :app:packageDebugResources
> Task :app:mergeDebugResources
> Task :app:dataBindingTriggerDebug
> Task :app:parseDebugLocalResources
> Task :app:javaPreCompileDebug
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:mapDebugSourceSetPaths
> Task :app:checkDebugAarMetadata
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:mergeDebugJniLibFolders
> Task :app:checkDebugDuplicateClasses
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:processDebugManifestForPackage
> Task :app:mergeLibDexDebug
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug
> Task :app:writeDebugAppMetadata
> Task :app:writeDebugSigningConfigVersions
> Task :app:mergeExtDexDebug
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac
.\gradlew.bat : warning: 
[options] source value 8 
is obsolete and will be 
removed in a future release
At line:1 char:1
+ .\gradlew.bat 
assembleDebug > 
build_output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (war  
  ning: [optio... future   
  release:String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
warning: [options] target 
value 8 is obsolete and 
will be removed in a 
future release
warning: [options] To 
suppress warnings about 
obsolete options, use 
-Xlint:-options.
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\AddTransactionActivit
y.java:14: error: package c
om.autoexpense.databinding 
does not exist
import com.autoexpense.data
binding.ActivityAddTransact
ionBinding;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\AddTransactionActivit
y.java:29: error: cannot 
find symbol
    private ActivityAddTran
sactionBinding binding;
            ^
  symbol:   class ActivityA
ddTransactionBinding
  location: class 
AddTransactionActivity
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\MainActivity.java:19:
 error: package com.autoexp
ense.databinding does not 
exist
import com.autoexpense.data
binding.ActivityMainBinding
;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\MainActivity.java:47:
 error: cannot find symbol
    private 
ActivityMainBinding 
binding;
            ^
  symbol:   class 
ActivityMainBinding
  location: class 
MainActivity
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\PrivacyNoticeActivity
.java:9: error: package com
.autoexpense.databinding 
does not exist
import com.autoexpense.data
binding.ActivityPrivacyNoti
ceBinding;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\PrivacyNoticeActivity
.java:22: error: cannot 
find symbol
    private ActivityPrivacy
NoticeBinding binding;
            ^
  symbol:   class ActivityP
rivacyNoticeBinding
  location: class 
PrivacyNoticeActivity
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\SettingsActivity.java
:14: error: package com.aut
oexpense.databinding does 
not exist
import com.autoexpense.data
binding.ActivitySettingsBin
ding;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\SettingsActivity.java
:36: error: cannot find 
symbol
    private 
ActivitySettingsBinding 
binding;
            ^
  symbol:   class 
ActivitySettingsBinding
  location: class 
SettingsActivity
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\TransactionListActivi
ty.java:16: error: package 
com.autoexpense.databinding
 does not exist
import com.autoexpense.data
binding.ActivityTransaction
ListBinding;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\activ
ities\TransactionListActivi
ty.java:32: error: cannot 
find symbol
    private ActivityTransac
tionListBinding binding;
            ^
  symbol:   class ActivityT
ransactionListBinding
  location: class 
TransactionListActivity
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\adapt
ers\TransactionAdapter.java
:16: error: package com.aut
oexpense.databinding does 
not exist
import com.autoexpense.data
binding.ItemTransactionBind
ing;
                           
       ^
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\adapt
ers\TransactionAdapter.java
:91: error: cannot find 
symbol
        private final 
ItemTransactionBinding 
binding;
                      ^
  symbol:   class 
ItemTransactionBinding
  location: class Transacti
onAdapter.TransactionViewHo
lder
C:\Users\ALISH\Desktop\paym
ent tracker\app\src\main\ja
va\com\autoexpense\ui\adapt
ers\TransactionAdapter.java
:93: error: cannot find 
symbol
        TransactionViewHold
er(ItemTransactionBinding 
binding) {
                           
   ^
  symbol:   class 
ItemTransactionBinding
  location: class Transacti
onAdapter.TransactionViewHo
lder
13 errors
3 warnings

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task '
:app:compileDebugJavaWithJa
vac'.
> Compilation failed; see 
the compiler error output 
for details.

* Try:
> Run with --info option 
to get more log output.
> Run with --scan to get 
full insights.

BUILD FAILED in 1m 50s
28 actionable tasks: 28 executed
